--- a/src/app/auth/views/components/login/login.component.html
+++ b/src/app/auth/views/components/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<mat-card class="center">
+    <mat-card-header>
+        <h2>Login</h2>
+    </mat-card-header>
+    <mat-card-content>
+        <form [formGroup]="forms" action="">
+            <mat-form-field appearance="outline">
+                <mat-label>Username</mat-label>
+                <input matInput formControlName="username" type="text" />
+                @if (username?.required) {
+                    <mat-error>The username is required.</mat-error>
+                }
+                @if (username?.email) {
+                    <mat-error>The username must be a valid mail.</mat-error>
+                }
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Password</mat-label>
+                <input matInput formControlName="password" type="password" minlength="5" />
+                @if (password?.required) {
+                    <mat-error>The password is required.</mat-error>
+                }
+                @if (password?.min) {
+                    <mat-error>The password must be at least 5 characters.</mat-error>
+                }
+            </mat-form-field>
+        </form>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-raised-button color="primary" (click)="onClick()">Log In</button>
+    </mat-card-actions>
+</mat-card>
